<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CodeAway</string>
    <string name="app_logo">App logo</string>
    <string name="username_email_hint">Username/email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Not registered? Sign-up</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="email_id_hint">Email id</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="send_email">Send email</string>
    <string name="contact_us">Contact Us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="change_email_id">Change email id</string>
    <string name="change_password">Change password</string>
    <string name="new_email">New email</string>
    <string name="apply">Apply</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="ice_creams">Ice creams</string>
    <string name="bevrages">Bevrages</string>
</resources>
